Memory Match v1.0 - Heather Hernandez

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                         <span class="value"></span>
                     </p>
                     <!-- Reset Button -->
-                    <button id="btn-reset" class="btn reset" onclick="reset(this)">
+                    <button id="btn-reset" class="btn reset">
                         Reset Game
                     </button>
                 </div><!-- end .panel-body -->
@@ -69,7 +69,7 @@
             <div id="game-area" class="panel panel-default">
                 <!-- Playing card set-up: .front = cards to match, .back = identical card backs -->
                 <div><!-- First row, cards 1 - 6 & Winner notice -->
-                    <div class="card">
+                    <div class="card start_pose">
                         <div class="front">
                             1 Clay
                             <img src="images/card-fronts/clay-card.png">
@@ -78,7 +78,7 @@
                             <img src="images/penumbra-cardback.png">
                         </div>
                     </div>
-                    <div class="card">
+                    <div class="card start_pose">
                         <div class="front">
                             2 Clay
                             <img src="images/card-fronts/clay-card.png">
@@ -87,7 +87,7 @@
                             <img src="images/penumbra-cardback.png">
                         </div>
                     </div>
-                    <div class="card">
+                    <div class="card start_pose">
                         <div class="front">
                             1 Deckle
                             <img src="images/card-fronts/deckle-card.png">
@@ -96,7 +96,7 @@
                             <img src="images/penumbra-cardback.png">
                         </div>
                     </div>
-                    <div class="card">
+                    <div class="card start_pose">
                         <div class="front">
                             2 Deckle
                             <img src="images/card-fronts/deckle-card.png">
@@ -105,7 +105,7 @@
                             <img src="images/penumbra-cardback.png">
                         </div>
                     </div>
-                    <div class="card">
+                    <div class="card start_pose">
                         <div class="front">
                             1 Kat
                             <img src="images/card-fronts/kat-card.png">
@@ -114,7 +114,7 @@
                             <img src="images/penumbra-cardback.png">
                         </div>
                     </div>
-                    <div class="card">
+                    <div class="card start_pose">
                         <div class="front">
                             2 Kat
                             <img src="images/card-fronts/kat-card.png">
@@ -125,7 +125,7 @@
                     </div>
                 </div><!-- end First Row -->
                 <div> <!-- Second Row, cards 7 - 12 -->
-                    <div class="card">
+                    <div class="card start_pose">
                         <div class="front">
                             1 Lapin
                             <img src="images/card-fronts/lapin-card.png">
@@ -134,7 +134,7 @@
                             <img src="images/penumbra-cardback.png">
                         </div>
                     </div>
-                    <div class="card">
+                    <div class="card start_pose">
                         <div class="front">
                             2 Lapin
                             <img src="images/card-fronts/lapin-card.png">
@@ -143,7 +143,7 @@
                             <img src="images/penumbra-cardback.png">
                         </div>
                     </div>
-                    <div class="card">
+                    <div class="card start_pose">
                         <div class="front">
                             1 Maldavis
                             <img src="images/card-fronts/maldavis-card.png">
@@ -152,7 +152,7 @@
                             <img src="images/penumbra-cardback.png">
                         </div>
                     </div>
-                    <div class="card">
+                    <div class="card start_pose">
                         <div class="front">
                             2 Maldavis
                             <img src="images/card-fronts/maldavis-card.png">
@@ -161,7 +161,7 @@
                             <img src="images/penumbra-cardback.png">
                         </div>
                     </div>
-                    <div class="card">
+                    <div class="card start_pose">
                         <div class="front">
                             1 Mat
                             <img src="images/card-fronts/mat-card.png">
@@ -170,7 +170,7 @@
                             <img src="images/penumbra-cardback.png">
                         </div>
                     </div>
-                    <div class="card">
+                    <div class="card start_pose">
                         <div class="front">
                             2 Mat
                             <img src="images/card-fronts/mat-card.png">
@@ -181,7 +181,7 @@
                     </div>
                 </div> <!-- end Second Row -->
                 <div> <!-- Third Row, cards 13 - 18 -->
-                    <div class="card">
+                    <div class="card start_pose">
                         <div class="front">
                             1 Unbound Member
                             <img src="images/card-fronts/member-card.png">
@@ -190,7 +190,7 @@
                             <img src="images/penumbra-cardback.png">
                         </div>
                     </div>
-                    <div class="card">
+                    <div class="card start_pose">
                         <div class="front">
                             2 Unbound Member
                             <img src="images/card-fronts/member-card.png">
@@ -199,7 +199,7 @@
                             <img src="images/penumbra-cardback.png">
                         </div>
                     </div>
-                    <div class="card">
+                    <div class="card start_pose">
                         <div class="front">
                             1 Neel
                             <img src="images/card-fronts/neel-card.png">
@@ -208,7 +208,7 @@
                             <img src="images/penumbra-cardback.png">
                         </div>
                     </div>
-                    <div class="card">
+                    <div class="card start_pose">
                         <div class="front">
                             2 Neel
                             <img src="images/card-fronts/neel-card.png">
@@ -217,7 +217,7 @@
                             <img src="images/penumbra-cardback.png">
                         </div>
                     </div>
-                    <div class="card">
+                    <div class="card start_pose">
                         <div class="front">
                             1 San Francisco
                             <img src="images/card-fronts/sanfran-card.png">
@@ -226,7 +226,7 @@
                             <img src="images/penumbra-cardback.png">
                         </div>
                     </div>
-                    <div class="card">
+                    <div class="card start_pose">
                         <div class="front">
                             2 San Francisco
                             <img src="images/card-fronts/sanfran-card.png">
