Memory Match v1.0 - Heather Hernandez

--- a/about.html
+++ b/about.html
@@ -62,29 +62,16 @@
             </h3>
             <ul>
                 <li>
-                    Programming Languages
-                    <ul>
-                        <li>
-                            HTML
-                        </li>
-                        <li>
-                            CSS
-                        </li>
-                    </ul>
+                    HTML
                 </li>
                 <li>
-                    Frameworks
-                    <ul>
-                        <li>Bootstrap</li>
-                    </ul>
+                    CSS &amp; Bootstrap Framework
                 </li>
                 <li>
-                    Graphic Software
-                    <ul>
-                        <li>
-                            GNU Image Manipulation Program (GIMP)
-                        </li>
-                    </ul>
+                    JavaScript &amp; jQuery Library
+                </li>
+                <li>
+                    GNU Image Manipulation Program (GIMP)
                 </li>
             </ul>
         </div><!-- end #skill_list, .col-md-4, Skills -->
@@ -95,7 +82,7 @@
             <h5>
                 Heather Hernandez
             </h5>
-            <img id="profile_pic" src="images/heather/Heather.jpg" alt="Photo of the Developer">
+            <img id="profile_pic" src="images/Heather.jpg" alt="Photo of the Developer">
             <p>
                 View Heather's
                 <a href="#">other work</a><!-- Projects section (profile site) -->
