Memory Match v1.0 - Heather Hernandez

--- a/index.html
+++ b/index.html
@@ -46,15 +46,24 @@
                         <span class="member_num"></span>
                     </p>
                     <p class="games-played">
-                        <span class="label">Games played</span>:
+                        <span class="label">Games Played</span>:
                         <span class="value"></span>
                     </p>
+                    <p class="games-won">
+                        <span class="label">Games Won</span>:
+                        <span class="value"></span>
+                    </p>
+                    <p>
+                        <span class="label">
+                            <strong>Previous Game Statistics</strong>
+                        </span>
+                    </p>
                     <p class="attempts">
-                        <span class="label">Attempts</span>:
+                        <span class="label">Match Attempts</span>:
                         <span class="value"></span>
                     </p>
                     <p class="accuracy">
-                        <span class="label">Accuracy</span>:
+                        <span class="label">Match Accuracy</span>:
                         <span class="value"></span>
                     </p>
                     <!-- Reset Button -->
