insert text for stats book

--- a/index.html
+++ b/index.html
@@ -50,11 +50,11 @@
                     </p>
                     <p class="attempts">
                         <span class="label">Match Attempts</span>:
-                        <span class="value"></span>
+                        <span class="value">0</span>
                     </p>
                     <p class="accuracy">
                         <span class="label">Match Accuracy</span>:
-                        <span class="value"></span>
+                        <span class="value">0</span>
                     </p>
                     <p class="games-played">
                         <span class="label">Games Played</span>:
