--- a/index.html
+++ b/index.html
@@ -54,15 +54,15 @@
                     </p>
                     <p class="accuracy">
                         <span class="label">Match Accuracy</span>:
-                        <span class="value">0</span>
+                        <span class="value">0%</span>
                     </p>
                     <p class="games-played">
                         <span class="label">Games Played</span>:
-                        <span class="value"></span>
+                        <span class="value">0</span>
                     </p>
                     <p class="games-won">
                         <span class="label">Games Won</span>:
-                        <span class="value"></span>
+                        <span class="value">0</span>
                     </p>
                     <!-- Reset Button -->
                     <button id="btn-reset" class="btn reset">
