--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Match Unbound</title>
+    <title>Sherlock</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Stylesheets: Bootstrap & Custom -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
@@ -10,213 +10,67 @@
     <!-- Script Libraries: JQuery, Bootstrap.js, & Custom -->
     <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-    <script src="main.js"></script>
-
+    <!--<script src="main.js"></script>-->
+    <!--<script>
+        for(var i = 0; i < 10000; i++){
+            if(i = 9999){
+                console.log("loop complete");
+            }
+        }
+    </script>-->
 </head>
 <body>
-    <!-- Layout styled with bootstrap: col-sm, col-md, & col-lg -->
-    <!-- Header: logo, title, game settings & about game -->
-    <header class="jumbotron">
-        <div class="col-sm-2 col-md-2 col-lg-2">
-            <img src="images/handbook-logo.png">
-        </div>
-        <div class="col-sm-8 col-md-8 col-lg-8">
-            <img src="images/title.png" alt="Match Unbound">
-        </div>
-        <div class="col-sm-2 col-md-2 col-lg-2">
-            <a href="#about_game" data-toggle="modal" data-backdrop="static">
-                About Game
-            </a><br>
-            <a href="#settings" data-toggle="modal" data-backdrop="static">
-                Settings
-            </a>
-        </div>
-    </header>
-    <!-- end .jumbotron, Header-->
-    <!-- Game Body -->
-    <div class="row">
-        <!-- Game Statistics & Reset Button: left side -->
-        <div class="col-sm-3 col-md-3 col-lg-3">
-            <div id="game-stats" class="panel">
-                <img id="stats-book" src="images/stats-book.png">
-
-                <div class="panel-heading">
-                    <h3>Narratio</h3>
-                </div>
-                <div class="panel-body">
-                    <p>
-                        <span class="label">Member</span>:
-                        <span class="member_num"></span>
-                    </p>
-                    <p class="attempts">
-                        <span class="label">Match Attempts</span>:
-                        <span class="value">0</span>
-                    </p>
-                    <p class="accuracy">
-                        <span class="label">Match Accuracy</span>:
-                        <span class="value">0%</span>
-                    </p>
-                    <p class="games-played">
-                        <span class="label">Games Played</span>:
-                        <span class="value">0</span>
-                    </p>
-                    <p class="games-won">
-                        <span class="label">Games Won</span>:
-                        <span class="value">0</span>
-                    </p>
-                    <!-- Reset Button -->
-                    <button id="btn-reset" class="btn reset">
-                        Reset Game
-                    </button>
-                </div>
-                <!-- end .panel-body -->
+    <div class="navigation navbar-inverse">
+        <div>
+            <div id="caseStats">
+                Cases Closed: <span>&nbsp</span>
             </div>
-            <!-- end #game-stats, .panel -->
-        </div>
-        <!-- end .col-sm-3, .col-md-3, .col-lg-3 Game Statistics -->
-        <!-- Card field (18 cards): right side -->
-        <div class="col-sm-8 col-md-8 col-lg-8">
-            <div id="game-area" class="panel panel-default">
-                <!-- Playing card set-up: .front = cards to match, .back = identical card backs -->
-
-
-                <!-- Winner screen, only shows on game completion -->
-                <div id="winner">
-                    Congratulations, you have matched all the cards!!!
-                </div>
+            <div id="title">
+                <div class="letterSquare">S</div>
+                <div class="letterSquare">H</div>
+                <div class="letterSquare">E</div>
+                <div class="letterSquare">R</div>
+                <div class="letterSquare">L</div>
+                <div class="letterSquare">O</div>
+                <div class="letterSquare">C</div>
+                <div class="letterSquare">K</div>
             </div>
-            <!-- end #game-area, .panel, .panel-default -->
         </div>
-        <!-- end .col-sm-9, .col-md-9, .col-lg-9 -->
-        <div class="col-sm-1 col-md-1 col-lg-1">
-            <img src="images/ladder.png" id="ladder">
+        <div id="caseFiles">
+            <div class="subtitle">
+                Case Files
+            </div>
+            <div class="file">
+                A Study in Pink
+            </div>
+            <div class="file">
+                The Blind Banker
+            </div>
+            <div class="file">
+                The Great Game
+            </div>
+            <div class="file">
+                A Scandal in Belgravia
+            </div>
+            <div class="file">
+                The Hounds of Baskerville
+            </div>
+            <div class="file">
+                The Reichenbach Fall
+            </div>
+        </div>
+
+    </div>
+    <div class="background">
+        <div class="clues">
+            <h3 class="subtitle">
+                Clues Found
+            </h3>
+        </div>
+        <div id="gameArea">
+            ""
         </div>
     </div>
-    <!-- end .row -->
-
-    <!-- Modals -->
-    <!-- Settings Modal -->
-    <div class="modal fade" id="settings" role="dialog">
-        <div class="modal-dialog">
-            <!-- Content-->
-            <div class="modal-content">
-                <div class="modal-header">
-                    <!-- X close button -->
-                    <button type="button" class="close" data-dismiss="modal">
-                        &times;
-                    </button>
-                    <h1 class="modal-title">
-                        Game Settings
-                    </h1>
-                </div>
-                <!-- end .modal-header -->
-                <div class="modal-body">
-                    <p>
-                        This area will display game play & settings
-                    </p>
-                </div>
-                <!-- Close button -->
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">
-                        CLOSE
-                    </button>
-                </div>
-            </div>
-            <!-- end .modal-content -->
-        </div>
-        <!-- end .modal-dialog -->
-    </div>
-    <!-- end .modal .fade #settings -->
-    <!-- About Game Modal -->
-    <div id="about_game" class="modal fade" role="dialog">
-        <div class="modal-dialog">
-            <!-- Content-->
-            <div class="modal-content">
-                <!-- X close button -->
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal">
-                        &times;
-                    </button>
-                    <h1 class="modal-title">
-                        About Match Unbound
-                    </h1>
-
-                </div>
-                <!-- end .modal-header -->
-                <div class="modal-body">
-                    <div class="row row-eq-height">
-                        <!-- Game Description -->
-                        <div class="col-md-4">
-                            <h3>
-                                About The Game
-                            </h3>
-
-                            <p>The memory matching game &#34;Match Unbound&#34; was inspired by the book <em>Mr.
-                                Penumbra's 24-Hour Bookstore</em>. The cards draw on character traits and locations
-                                throughout the book. This lead to the title being &#34;Match Unbound&#34;, as some of
-                                the characters in the book are considered Unbound in their &#34;book club&#34;.
-                            </p>
-                        </div>
-                        <!-- end .col-md-4, Game Description -->
-                        <!-- Skill List -->
-                        <div id="skill_list" class="col-md-4">
-                            <h3>
-                                Skills Used In Game Production
-                            </h3>
-                            <ul>
-                                <li>
-                                    HTML
-                                </li>
-                                <li>
-                                    CSS &amp; Bootstrap Framework
-                                </li>
-                                <li>
-                                    JavaScript &amp; jQuery Library
-                                </li>
-                                <li>
-                                    GNU Image Manipulation Program (GIMP)
-                                </li>
-                            </ul>
-                        </div>
-                        <!-- end #skill_list, .col-md-4, Skills -->
-                        <!-- Developer Pic & links -->
-                        <div class="col-md-4">
-                            <h3>
-                                The Developer
-                            </h3>
-                            <img id="profile_pic" src="images/Heather.jpg" alt="Photo of the Developer">
-
-                            <p>
-                                <strong>
-                                    Heather Hernandez
-                                </strong>
-                            </p>
-
-                            <p>
-                                View Heather's
-                                <a href="#">other work</a><!-- Need to update: Projects section (profile site) -->
-                                and additional
-                                <a href="#">information</a><!-- Need to update: About Me section (profile site) -->
-                                about her.
-                            </p>
-                        </div>
-                        <!-- end .col-md-4, Developer Pic & links -->
-                    </div>
-                    <!-- end .row -->
-                </div>
-                <!-- end .modal-body -->
-                <!-- Close button -->
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">
-                        CLOSE
-                    </button>
-                </div>
-            </div>
-            <!-- end .modal-content -->
-        </div>
-        <!-- end .modal-dialog -->
-    </div>
-    <!-- end .modal .fade #about_game -->
 </body>
 
 </html>
