updated some layout features/views. Added card object for js

--- a/index.html
+++ b/index.html
@@ -62,10 +62,40 @@
 
     </div>
     <div class="background">
-        <div class="clues">
+        <div id="clueArea">
             <h3 class="subtitle">
                 Clues Found
             </h3>
+            <div class="clue">
+                First clue
+            </div>
+            <div class="clue">
+                Second clue
+            </div>
+            <div class="clue">
+                Third clue
+            </div>
+            <div class="clue">
+                Fourth clue
+            </div>
+            <div class="clue">
+                Fifth clue
+            </div>
+            <div class="clue">
+                Sixth clue
+            </div>
+            <div class="clue">
+                Seventh clue
+            </div>
+            <div class="clue">
+                Eighth clue
+            </div>
+            <div class="clue">
+                Ninth clue
+            </div>
+            <div class="clue solution">
+                Mystery Solved
+            </div>
         </div>
         <div id="gameArea">
             ""
