added style sheet to hold clue area & children styles. Added class for eleven clues.

--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
 <head>
     <title>Sherlock</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- Stylesheets: Bootstrap & Custom -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
-    <link rel="stylesheet" href="style.css">
-    <!-- Script Libraries: JQuery, Bootstrap.js, & Custom -->
-    <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+
+    <!-- Stylesheets -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+    <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="style/clues.css">
+
+    <!-- Script Libraries -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
     <!--<script src="main.js"></script>-->
     <!--<script>
@@ -69,17 +72,20 @@
             <h4 class="subtitle">
                 Accuracy: <span class="clueStats">x</span>%
             </h4>
-            <div class="clue" id="c1of5">
+            <div class="clue ninePlus" id="c1of11">
                 <img src="images/cardBack.png" class="clueImage">
             </div>
-            <div class="clue" id="c2of5"></div>
-            <div class="clue" id="c3of5"></div>
-            <div class="clue" id="c4of5"></div>
-            <div class="clue" id="c5of5"></div>
-            <!--<div class="clue" id="c6of7"></div>-->
-            <!--<div class="clue" id="c7of7"></div>-->
-            <!--<div class="clue" id="c8of9"></div>-->
-            <!--<div class="clue" id="c9of9"></div>-->
+            <div class="clue ninePlus" id="c2of11"></div>
+            <div class="clue ninePlus" id="c3of11"></div>
+            <div class="clue ninePlus" id="c4of11"></div>
+            <div class="clue ninePlus" id="c5of11"></div>
+            <div class="clue ninePlus" id="c6of11"></div>
+            <div class="clue ninePlus" id="c7of11"></div>
+            <div class="clue ninePlus" id="c8of11"></div>
+            <div class="clue ninePlus" id="c9of11"></div>
+            <div class="clue ninePlus" id="c10of11"></div>
+            <div class="clue ninePlus" id="c11of11"></div>
+
             <div class="clue solution" id="s3">
                 <div class="solved"></div>
                 <p>Part 1</p>
