added footprints between eleven clues

--- a/index.html
+++ b/index.html
@@ -72,6 +72,14 @@
             <h4 class="subtitle">
                 Accuracy: <span class="clueStats">x</span>%
             </h4>
+            <div class="shoePrint eleven horizonLine" id="c1to2"></div>
+            <div class="shoePrint eleven forwardSlash" id="c2to4"></div>
+            <div class="shoePrint eleven horizonLine" id="c4to5"></div>
+            <div class="shoePrint eleven forwardSlash" id="c5to7"></div>
+            <div class="shoePrint eleven horizonLine" id="c7to8"></div>
+            <div class="shoePrint eleven forwardSlash" id="c8to10"></div>
+            <div class="shoePrint eleven horizonLine" id="c10to11"></div>
+
             <div class="clue ninePlus" id="c1of11">
                 <img src="images/cardBack.png" class="clueImage">
             </div>
