--- a/index.html
+++ b/index.html
@@ -9,18 +9,14 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel="stylesheet" href="style/style.css">
     <link rel="stylesheet" href="style/clues.css">
+    <link rel="stylesheet" href="style/cards.css">
 
     <!-- Script Libraries -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-    <!--<script src="main.js"></script>-->
-    <!--<script>
-        for(var i = 0; i < 10000; i++){
-            if(i = 9999){
-                console.log("loop complete");
-            }
-        }
-    </script>-->
+    <script src="js/script.js"></script>
+    <script src="js/gameObjects.js"></script>
+
 </head>
 <body class="container-fluid">
     <div class="navigation navbar-inverse">
@@ -72,44 +68,33 @@
             <h4 class="subtitle">
                 Accuracy: <span class="clueStats">x</span>%
             </h4>
-            <div class="shoePrint eleven horizonLine" id="c1to2"></div>
-            <div class="shoePrint eleven forwardSlash" id="c2to4"></div>
-            <div class="shoePrint eleven horizonLine" id="c4to5"></div>
-            <div class="shoePrint eleven forwardSlash" id="c5to7"></div>
-            <div class="shoePrint eleven horizonLine" id="c7to8"></div>
-            <div class="shoePrint eleven forwardSlash" id="c8to10"></div>
-            <div class="shoePrint eleven horizonLine" id="c10to11"></div>
+            <!--<div class="shoePrint five backSlash" id="c1to2"></div>
+            <div class="shoePrint five forwardSlash" id="c2to3"></div>
+            <div class="shoePrint five backSlash" id="c3to4"></div>
+            <div class="shoePrint five forwardSlash" id="c4to5"></div>
 
-            <div class="clue ninePlus" id="c1of11">
+            <div class="clue" id="c1of5">
                 <img src="images/cardBack.png" class="clueImage">
             </div>
-            <div class="clue ninePlus" id="c2of11"></div>
-            <div class="clue ninePlus" id="c3of11"></div>
-            <div class="clue ninePlus" id="c4of11"></div>
-            <div class="clue ninePlus" id="c5of11"></div>
-            <div class="clue ninePlus" id="c6of11"></div>
-            <div class="clue ninePlus" id="c7of11"></div>
-            <div class="clue ninePlus" id="c8of11"></div>
-            <div class="clue ninePlus" id="c9of11"></div>
-            <div class="clue ninePlus" id="c10of11"></div>
-            <div class="clue ninePlus" id="c11of11"></div>
+            <div class="clue" id="c2of5"></div>
+            <div class="clue" id="c3of5"></div>
+            <div class="clue" id="c4of5"></div>
+            <div class="clue" id="c5of5"></div>
 
             <div class="clue solution" id="s3">
-                <div class="solved"></div>
+                <div class="solutionGraphic solved"></div>
                 <p>Part 1</p>
             </div>
             <div class="clue solution" id="s2">
-                <div class="solved"></div>
+                <div class="solutionGraphic solved"></div>
                 <p>Part 2</p>
             </div>
             <div class="clue solution" id="s1">
-                <div class="solved"></div>
+                <div class="solutionGraphic"></div>
                 <p>Mystery</p>
-            </div>
+            </div>-->
         </div>
-        <div id="gameArea">
-            ""
-        </div>
+        <div id="gameArea"></div>
     </div>
 </body>
 
