implemented stats updating in game object & updates to DOM

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="navigation navbar-inverse">
         <div>
             <div id="caseStats">
-                Cases Closed: <span class="caseClosed">x</span>
+                Cases Closed: <span id="casesClosed">&nbsp;</span>
             </div>
             <div id="title">
                 <div class="letterSquare">S</div>
@@ -63,10 +63,13 @@
     <div class="background row">
         <div id="clueArea">
             <h4 class="subtitle">
-                Clues Found: <span class="cluesFound">x</span>/<span class="cluesRemain">y</span>
+                Clues Found:
+                <span id="cluesFound">&nbsp;</span>
+                /
+                <span id="cluesRemain">&nbsp;</span>
             </h4>
             <h4 class="subtitle">
-                Accuracy: <span class="clueStats">x</span>%
+                Accuracy: <span id="clueAccuracy">&nbsp;</span>
             </h4>
             <!--<div class="shoePrint five backSlash" id="c1to2"></div>
             <div class="shoePrint five forwardSlash" id="c2to3"></div>
