moved card flip and click handler to the card object

--- a/index.html
+++ b/index.html
@@ -76,25 +76,40 @@
             <div class="shoePrint five backSlash" id="c3to4"></div>
             <div class="shoePrint five forwardSlash" id="c4to5"></div>
 
-            <div class="clue" id="c1of5">
-                <img src="images/cardBack.png" class="clueImage">
+            <div class="clue" id="c1of11">
+                <img src="images/clues/pink/clue1.1.png" class="clueImage">
             </div>
-            <div class="clue" id="c2of5"></div>
-            <div class="clue" id="c3of5"></div>
-            <div class="clue" id="c4of5"></div>
-            <div class="clue" id="c5of5"></div>
-
-            <div class="clue solution" id="s3">
-                <div class="solutionGraphic solved"></div>
-                <p>Part 1</p>
+            <div class="clue" id="c2of11">
+                <img src="images/clues/pink/clue1.2.png" class="clueImage">
             </div>
-            <div class="clue solution" id="s2">
-                <div class="solutionGraphic solved"></div>
-                <p>Part 2</p>
+            <div class="clue" id="c3of11">
+                <img src="images/clues/pink/clue1.3.png" class="clueImage">
             </div>
-            <div class="clue solution" id="s1">
-                <div class="solutionGraphic"></div>
-                <p>Mystery</p>
+            <div class="clue" id="c4of11">
+                <img src="images/clues/pink/clue1.4.png" class="clueImage">
+            </div>
+            <div class="clue" id="c5of11">
+                <img src="images/clues/pink/clue1.5.png" class="clueImage">
+            </div>
+            <div class="clue" id="c6of11">
+                <img src="images/clues/pink/clue1.1.png" class="clueImage">
+            </div>
+            <div class="clue" id="c7of11">
+                <img src="images/clues/pink/clue1.2.png" class="clueImage">
+            </div>
+            <div class="clue" id="c8of11">
+                <img src="images/clues/pink/clue1.3.png" class="clueImage">
+            </div>
+            <div class="clue" id="c9of11">
+                <img src="images/clues/pink/clue1.4.png" class="clueImage">
+            </div>
+            <div class="clue" id="c10of11">
+                <img src="images/clues/pink/clue1.1.png" class="clueImage">
+            </div>
+            <div class="clue" id="c11of11">
+                <img src="images/clues/pink/clue1.2.png" class="clueImage">
+            </div>
+            <div class="solution solved eleven">
             </div>-->
         </div>
         <div id="gameArea"></div>
