copied gameObjects.js file from sherlock_cardObject. modified clue display.

--- a/index.html
+++ b/index.html
@@ -71,10 +71,16 @@
             <h4 class="subtitle">
                 Accuracy: <span id="clueAccuracy">&nbsp;</span>
             </h4>
-            <div class="shoePrint five backSlash" id="c1to2"></div>
-            <div class="shoePrint five forwardSlash" id="c2to3"></div>
-            <div class="shoePrint five backSlash" id="c3to4"></div>
-            <div class="shoePrint five forwardSlash" id="c4to5"></div>
+            <div class="shoePrint eleven horizonLine" id="c1to2"></div>
+            <div class="shoePrint eleven forwardSlash" id="c2to3"></div>
+            <div class="shoePrint eleven forwardSlash" id="c3to4"></div>
+            <div class="shoePrint eleven horizonLine" id="c4to5"></div>
+            <div class="shoePrint eleven forwardSlash" id="c5to6"></div>
+            <div class="shoePrint eleven forwardSlash" id="c6to7"></div>
+            <div class="shoePrint eleven horizonLine" id="c7to8"></div>
+            <div class="shoePrint eleven forwardSlash" id="c8to9"></div>
+            <div class="shoePrint eleven forwardSlash" id="c9to10"></div>
+            <div class="shoePrint eleven horizonLine" id="c10to11"></div>
 
             <div class="clue" id="c1of11">
                 <img src="images/clues/pink/clue1.1.png" class="clueImage">
